tests/transpiler/x/swift/partial_application.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/057/main.swift:5:17: error: missing argument for parameter #2 in call
1 | // Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:18:37 GMT+7
2 | func add(_ a: Int, _ b: Int) -> Int {
  |      `- note: 'add' declared here
3 |     return (a + b)
4 | }
5 | let add5 = add(5)
  |                 `- error: missing argument for parameter #2 in call
6 | print((add5(3) as! Int))
7 | 
